# salva

./: LICENSE  README.md  build.py  pyproject.toml  salva_gui_main.py  salva_main.py
.github/workflows/: build.yml
salva/: __init__.py  advice.py  cli.py  gui.py  ui.py
salva/checks/: __init__.py  base.py  firewall.py  kernel.py  permissions.py  services.py  ssh.py  updates.py  users.py
tests/: gui_smoke.py
